# CJ

./: .gitignore  ARCHITECTURE.md  LLM_SCENARIOS.md  README.md  controller.py  pyproject.toml  setup.py
.github/workflows/: docs.yml
chaos_jungle/: __init__.py  _duration.py  cli.py  config.py  conversation.py  daemon.py  dashboard.py  decorators.py  fetch.py  fuzzing.py  guardrails.py  intercept.py  judge.py  oracles.py  preflight.py  pytest_plugin.py  registry.py  runner.py  scenario.py  suite.py
chaos_jungle/db/: __init__.py  session_db.py
chaos_jungle/faults/: __init__.py  base.py  bpf.py  gateway.py  gpu.py  llm.py  network.py  process.py  resources.py  skill.py  skill_file.py  state.py  storage.py
chaos_jungle/metrics/: __init__.py  base.py  builtin.py  custom.py  metric_set.py  schema.py  strategy.py
chaos_jungle/scripts/gpu/: cj_gpu_memory.py  cj_gpu_memory_amd.py
chaos_jungle/scripts/llm_proxy/: llm_proxy.py
chaos_jungle/targets/: __init__.py  base.py  http.py  local.py  logging.py  ssh.py
docs/: architecture.rst  changelog.rst  concepts.rst  conf.py  examples.rst  index.rst  quickstart.rst
docs/api/: cli.rst  daemon.rst  dashboard.rst  decorators.rst  faults.rst  guardrails.rst  judge.rst  metrics.rst  runner.rst  scenario.rst  suite.rst  targets.rst
docs/guides/: conversation.rst  dashboard.rst  data.rst  fuzzing.rst  gateway.rst  gpu.rst  http.rst  intercept.rst  judge.rst  llm.rst  local.rst  measurement.rst  metrics.rst  network.rst  ollama.rst  oracles.rst  paper-study.rst  process.rst  registry.rst  resources.rst  safety.rst  scenarios.rst  semantic.rst  separate-mode.rst  skill.rst  ssh.rst  state.rst  storage.rst  strategies.rst  traces.rst
examples/: README.md  demo_output.py  fault_composition.py  fault_scheduling.py  iris_experiment.py  llm_agent.py  llm_resilience.py  measure_auto.py  paper_study.py  paper_study.yml  quickstart.py  silent_corrupt_detect.py  ssh_remote.py
scenarios/: baseline.py  config.py  network_delay.py  network_silent.py  run_all.py  storage_corrupt.py  utils.py
slides/: index.html
