[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaos-jungle"
version = "0.1.0"
description = "A generic chaos engineering framework for distributed systems"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "chaos-jungle contributors" }
]
keywords = ["chaos", "engineering", "fault injection", "testing", "distributed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Networking",
]
dependencies = [
    "paramiko>=3.0,<6.0",
    "click>=8.0,<9.0",
    "requests>=2.28,<3.0",
    "httpx>=0.27,<1.0",
    "fastapi>=0.110,<1.0",
    "uvicorn[standard]>=0.29,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "pyyaml>=6.0,<7.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "myst-parser>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "black>=24.0",
    "ruff>=0.4",
]

[project.scripts]
chaos-jungle = "chaos_jungle.cli:main"
cj-daemon    = "chaos_jungle.daemon:run"

[project.entry-points."pytest11"]
chaos-jungle = "chaos_jungle.pytest_plugin"

[tool.setuptools.packages.find]
where = ["."]
include = ["chaos_jungle*"]

[tool.setuptools.package-data]
"chaos_jungle.scripts.storage" = ["*.py", "*.cfg"]
"chaos_jungle.scripts.bpf" = ["*.py", "*.c"]
"chaos_jungle.scripts.gpu" = ["*.py"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
